Switch to multi jdk source image mode